-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
5.15, 6.2.3
-
-
8b7128b92 (dev), f467e29f7 (dev), 930db8b30 (6.4), 528ca10ab (6.4), eb96127e1 (tqtc/lts-6.2), 146defd6a (tqtc/lts-6.2)
Hello,
There seem to be a few issues with lottie animations. Using the LottieAnimation type and trying to run various different animation downloaded for the internet, I am noticing a few strange issues.
It seems this might be related to a previous un-resolved bug linked below, but I wanted to bring this up again as it is present in Qt 6.
Previous issue: https://bugreports.qt.io/browse/QTBUG-73803
In Qt 6.2.3 some lottie animations will run while others don't, I have attached a Qt project which has a few animation some of which run and other don't.
9744-sample-animation.json: runs but produces the error "Error: qt.lottieqt.bodymovin.parser: Unsupported shape type: "mm""
96848-astronaut-running.json: runs without error
1370-confetti.json: does not run and produces error "qt.lottieqt.bodymovin.parser: Unsupported layer type: 0"
failure_animation.json: Only displays and image but does not produce an error message
In Qt 5.15.9
96848-astronaut-running.json - ( no image was displayed)
qml: Loading
qt.lottieqt.bodymovin.parser: assets not supported
qt.lottieqt.bodymovin.parser: Unsupported layer type: 2
9744-sample-animation.json: static image is displayed with the following error message "qt.lottieqt.bodymovin.parser: Unsupported shape type: "mm""
96848-astronaut-running.json - no image is displayed with the following error messages
qt.lottieqt.bodymovin.parser: assets not supported
qt.lottieqt.bodymovin.parser: Unsupported layer type: 2
failure_animation.json: Static image is displayed
- relates to
-
QTBUG-73803 qt.lottieqt.bodymovin.parser BMLayer::construct - Unsupported layer type: 0
-
- Reported
-
| For Gerrit Dashboard: QTBUG-102550 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 417708,9 | Fix an error on parsing property animation keyframes | dev | qt/qtlottie | Status: MERGED | +2 | 0 |
| 418462,3 | Fix bugs on ellipse and fill shape | dev | qt/qtlottie | Status: MERGED | +2 | 0 |
| 448508,2 | Fix bugs on ellipse and fill shape | 6.4 | qt/qtlottie | Status: MERGED | +2 | 0 |
| 448516,2 | Fix an error on parsing property animation keyframes | 6.4 | qt/qtlottie | Status: MERGED | +2 | 0 |
| 448517,2 | Fix an error on parsing property animation keyframes | tqtc/lts-6.2 | qt/tqtc-qtlottie | Status: MERGED | +2 | 0 |
| 448579,2 | Fix bugs on ellipse and fill shape | tqtc/lts-6.2 | qt/tqtc-qtlottie | Status: MERGED | +2 | 0 |