Fix bugs on ellipse and fill shape

The direction of ellipse is not reversed by default.
The fill shape now applies the opacity value to color.

Pick-to: 6.4 6.2
Task-number: QTBUG-102550
Change-Id: I93ceb17c85b10af5b1255db8d8803c355cd662ea
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>